--- a/package.json
+++ b/package.json
@@ -1,30 +1,23 @@
 {
+  "description": "SQL migrations library",
+  "license": "MIT License",
+  "private": true,
+  "homepage": "https://github.com/yogthos/macchiato-framework/macchiato-migrations",
   "name": "@macchiato/migrations",
-  "version": "0.0.5",
-  "description": "SQL migrations library for Macchiato.",
   "author": {
-    "name" : "Dmitri Sotnikov",
-    "email" : "dmitri.sotnikov@gmail.com",
-    "url" : "http://yogthos.net/"
+    "name": "Dmitri Sotnikov",
+    "email": "dmitri.sotnikov@gmail.com",
+    "url": "http://yogthos.net/"
   },
-  "contributors": [
-    {
-      "name" : "Miloslav Nenadál",
-      "email": "nenadalm@gmail.com"
-    }
-  ],
-  "homepage": "https://github.com/macchiato-framework/macchiato-migrations",
-  "license": "MIT",
   "directories": {
     "lib": "src"
   },
   "files": [
     "src/*"
   ],
-  "keywords": [
-    "clojure",
-    "clojurescript",
-    "cljs",
-    "self-host"
-  ]
+  "version": "0.0.5",
+  "dependencies": {
+    "postgrator": "3.1.0",
+    "pg": "7.4.0"
+  }
 }
